# sparta-simplified

./: .gitignore  CMakeLists.txt  README.md
src/: Pipe.cpp  Pipe.hpp  StageSim.cpp  StageSim.hpp  main_3s.cpp
